--- a/youtrack-nginx.conf
+++ b/youtrack-nginx.conf
@@ -1,5 +1,5 @@
 upstream youtrack_upstream {
-  server 159.65.166.34:5000
+  server 159.65.166.34:5000;
 }
 
 map $http_upgrade $connection_upgrade {
