--- a/youtrack-nginx.conf
+++ b/youtrack-nginx.conf
@@ -84,4 +84,13 @@ server {
       add_header Access-Control-Allow-Origin *;
       access_log off;
     }
+
+    location /rocket {
+      proxy_set_header X-Forwarded-Host $host;
+      proxy_set_header X-Forwarded-Server $host;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_buffering off;
+      proxy_pass http://localhost:8000/rocket;
+      client_max_body_size 10M;
+    }
 }
